[package]
name = "double-buffered-io"
version = "0.1.0"
edition = "2021"
authors = ["David Kooi david.kooi@diracsolutions.com"]
description = "A high-performance double-buffered I/O pipeline with event-driven processing"


[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Serial port support
tokio-serial = "5.4"

# Error handling
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Optional: Performance monitoring
metrics = { version = "0.23", optional = true }
prometheus = { version = "0.13", optional = true }

# Optional: Serialization for configuration
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
toml = { version = "0.8", optional = true }

# Optional: Command-line interface
clap = { version = "4.5", features = ["derive"], optional = true }

[dev-dependencies]
# Testing utilities
criterion = "0.5"
mockall = "0.13"
tempfile = "3.12"
tokio-test = "0.4"
proptest = "1.5"
rstest = "0.21"

[features]
default = ["cli"]
monitoring = ["metrics", "prometheus"]
config = ["serde", "serde_json", "toml"]
cli = ["clap"]
full = ["monitoring", "config", "cli"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 2
debug = true